--- a/package.json
+++ b/package.json
@@ -1,28 +1,54 @@
 {
-  "name": "wetube",
+  "name": "wetubeclone",
   "version": "1.0.0",
-  "description": "Cloning Youtube with vanilla and Node",
+  "description": "Cloning youtube with VanillaJS and NodeJS",
   "main": "index.js",
-  "author": "LeeJuyeon",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ebooome/WetubeClone.git"
+  },
+  "author": "JuyeonLee",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/ebooome/WetubeClone/issues"
+  },
+  "homepage": "https://github.com/ebooome/WetubeClone#readme",
   "dependencies": {
-    "@babel/core": "^7.9.0",
+    "@babel/core": "^7.8.7",
     "@babel/node": "^7.8.7",
-    "@babel/preset-env": "^7.9.5",
+    "@babel/polyfill": "^7.8.7",
+    "@babel/preset-env": "^7.8.7",
+    "autoprefixer": "^9.7.6",
+    "babel-loader": "^8.1.0",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
+    "css-loader": "^3.5.2",
     "dotenv": "^8.2.0",
+    "eslint-plugin-prettier": "^3.1.3",
     "express": "^4.17.1",
-    "helmet": "^3.22.0",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "helmet": "^3.21.3",
     "mongoose": "^5.9.9",
-    "morgan": "^1.10.0",
+    "morgan": "^1.9.1",
     "multer": "^1.4.2",
-    "pug": "^2.0.4"
+    "node-sass": "^4.13.1",
+    "postcss-loader": "^3.0.0",
+    "pug": "^2.0.4",
+    "sass-loader": "^8.0.2",
+    "scss-loader": "0.0.1",
+    "webpack": "^4.42.1",
+    "webpack-cli": "^3.3.11"
   },
   "scripts": {
-    "start": "nodemon --exec babel-node init.js --delay 2"
+    "dev:server": "nodemon --exec babel-node init.js --delay 2 --ignore 'scss' ",
+    "dev:assets": "set WEBPACK_ENV=development&&webpack -w",
+    "build:assets": "set WEBPACK_ENV=production&&webpack"
   },
   "devDependencies": {
-    "nodemon": "^2.0.3"
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb-base": "^14.1.0",
+    "eslint-plugin-import": "^2.20.2",
+    "nodemon": "^2.0.3",
+    "prettier": "^2.0.4"
   }
 }
